ATS/main/default/objects/Job_Posting__c/fields/Client_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Job_Id__c</fullName>
    <label>Client Job Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>