ATS/main/default/objects/Job_Posting__c/fields/Educational_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Educational_Qualification__c</fullName>
    <label>Educational Qualification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>