ATS/main/default/objects/Job_Posting__c/fields/Max_Experience__c.field-meta.xml
<CustomField>
    <fullName>Max_Experience__c</fullName>
    <inlineHelpText>In Years</inlineHelpText>
    <label>Max Experience</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>