ATS/main/default/objects/Job_Posting__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP CO</fullName>
            </value>
            <value>
                <fullName>SAP FI</fullName>
            </value>
            <value>
                <fullName>SAP MM</fullName>
            </value>
            <value>
                <fullName>SAP SD</fullName>
            </value>
            <value>
                <fullName>.Net Developer</fullName>
            </value>
            <value>
                <fullName>Windchill SAP</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Defence</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>DFM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>