ATS/main/default/objects/Job_Posting__c/fields/Skils_Required_for_Job__c.field-meta.xml
<CustomField>
    <fullName>Skils_Required_for_Job__c</fullName>
    <label>Skils Required for Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>