ATS/main/default/objects/Job_Posting__c/fields/Work_Environment__c.field-meta.xml
<CustomField>
    <fullName>Work_Environment__c</fullName>
    <label>Work Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work from Office</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
                <default>true</default>
                <label>Remote</label>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>