ATS/main/default/objects/Job_Posting__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <label>Work Hours</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>