ATS/main/default/objects/Job_Posting__c/validationRules/City_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(City__c),
   OR(
        ISPICKVAL( Work_Environment__c ,&apos;Work from Office&apos;),
        ISPICKVAL(Work_Environment__c , &apos;Hybrid&apos;) 
     )
)</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>Please fill city</errorMessage>
</ValidationRule>