ATS/main/default/objects/Job_Posting__c/validationRules/Country_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Country__c , &apos;&apos;),
OR(
ISPICKVAL( Work_Environment__c ,&apos;Work from Office&apos;),
ISPICKVAL( Work_Environment__c , &apos;Hybrid&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Please fill Country</errorMessage>
</ValidationRule>