ATS/main/default/objects/Job_Posting__c/validationRules/Reason_for_Closing_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Closing_Validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Job_Status__c , &apos;Closed&apos;),  
    ISBLANK( Reason_for_Closing__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Closing__c</errorDisplayField>
    <errorMessage>Please Fill Reason for Closing the Job</errorMessage>
</ValidationRule>