ATS/main/default/objects/Job_Posting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Job_Id__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Job_Description__c</columns>
    <columns>Educational_Qualification__c</columns>
    <columns>Country__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Salary_Range__c</columns>
    <columns>Skills__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>